changed command arguments & added clear argument for team command